@@ -10,7 +10,7 @@ TODO for 0.26
 - double click on pen bug (DONE)
 - dirty fill of open paths bug (DONE)
 - viewbox not applied bug (DONE)
-- fill style -> CMYK -> gradient bug
+- fill style -> CMYK -> gradient bug (DONE)
 
 TODO for 0.25
 
